old/tur/tur-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tur-svc
spec:
  selector:
    app: tur-deploy
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
