old/tur/tur-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tur-ingress
  annotations:
    cert-manager.io/cluster-issuer: "tur-clusterissuer"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "public"
  tls:
  - hosts:
    - turno.leandrodamasio.com
    secretName: tur-secret
  rules:
  - host: turno.leandrodamasio.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tur-svc
            port:
              number: 8080
